/**
 * MIT License
 * Copyright (c) 2021 Fonoster Inc
 *
 * The CallMananger proto contains the artificats for the call mananger
 * such as creation and deployment.
 */
syntax = "proto3";

package fonoster.callmanager.v1beta1;

option go_package = "github.com/fonoster/fonoster/mods/callmanager/fonoster/services/protos/callmanager";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";

service CallManager {
  // Originates a call and pass channel to an application
  rpc Call (CallRequest) returns (CallResponse) {
    option (google.api.http) = {
      post: "/v1beta1/call"
      body: "*"
    };
  };
}

message CallRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"from\": \"+17853178070\", \"to\": \"+17852268080\", \"webhook\": \"https://c5b6-172-220-243-215.ngrok.io\"}"
  };
  // Origination number
  string from = 1;
  // Destination number
  string to = 2;
  // Optional webhook
  string webhook = 3;
  // If enabled it will accept any input in the from and to
  /**
  * @deprecated
  */
  bool ignore_e164_validation = 4;
  // Optional metadata for voice applications
  string metadata = 5;
  // Optional app reference
  string app_ref = 6;
}

message CallResponse {
  // Call's reference
  string ref = 1;
}
